--- a/Ethics/H-2019-0254/index.html
+++ b/Ethics/H-2019-0254/index.html
@@ -748,7 +748,7 @@ color:black'><o:p>&nbsp;</o:p></span></b></p>
 <p class=MsoNormal style='text-align:justify'><span style='font-family:Arial'>You
 are invited to participate in the research project identified above which is
 being conducted by <span class=SpellE>Prof.</span> Scott Brown, <span
-class=SpellE>Dr.</span> Ami Eidels and Dr Keith Nesbitt from the School of
+class=SpellE>Dr.</span> Ami Eidels and Dr Zachary Howard from the School of
 Psychology and the School of Information Technology at the University of
 Newcastle. The data collected will be analysed and may be used towards the PhD
 thesis of students from these schools.<o:p></o:p></span></p>
